Fix `.masthead` and `.page__footer` overlapping full screen video ele… …ments.
- Close #933

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -483,7 +483,7 @@ a.reversefootnote {
 
 /*
    Responsive Video Embed
-      ========================================================================== */
+   ========================================================================== */
 
 .responsive-video-container {
   position: relative;
@@ -501,5 +501,13 @@ a.reversefootnote {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+// full screen video fixes
+:-webkit-full-screen-ancestor {
+   .masthead,
+   .page__footer {
+    position: static;
   }
 }
